--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "node build/server.js",
     "build": "tsup src --out-dir build",
     "test": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +18,7 @@
     "@rocketseat/eslint-config": "2.2.2",
     "@types/bcryptjs": "2.4.6",
     "@types/node": "22.5.1",
+    "@vitest/coverage-v8": "2.0.5",
     "eslint": "8.57.0",
     "prisma": "5.19.0",
     "tsup": "8.2.4",
