--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "tsup src --out-dir build",
     "test": "vitest run",
     "test:watch": "vitest",
-    "test:coverage": "vitest run --coverage"
+    "test:coverage": "vitest run --coverage",
+    "test:ui": "vitest --ui"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +20,7 @@
     "@types/bcryptjs": "2.4.6",
     "@types/node": "22.5.1",
     "@vitest/coverage-v8": "2.0.5",
+    "@vitest/ui": "2.0.5",
     "eslint": "8.57.0",
     "prisma": "5.19.0",
     "tsup": "8.2.4",
