--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "test:watch": "vitest --dir src/use-cases",
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui",
+    "test:create-prisma-env": "npm link ./prisma/vitest-environment-prisma",
+    "test:install-prisma-env": "npm link vitest-environment-prisma",
+    "pretest:e2e": "run-s test:create-prisma-env test:install-prisma-env",
     "test:e2e": "vitest run --dir src/http"
   },
   "keywords": [],
@@ -23,6 +26,7 @@
     "@vitest/coverage-v8": "2.0.5",
     "@vitest/ui": "2.0.5",
     "eslint": "8.57.0",
+    "npm-run-all": "4.1.5",
     "prisma": "5.19.0",
     "tsup": "8.2.4",
     "tsx": "4.19.0",
