--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "test:create-prisma-env": "npm link ./prisma/vitest-environment-prisma",
     "test:install-prisma-env": "npm link vitest-environment-prisma",
     "pretest:e2e": "run-s test:create-prisma-env test:install-prisma-env",
-    "test:e2e": "vitest run --dir src/http"
+    "test:e2e": "vitest run --dir src/http",
+    "test:e2e:watch": "vitest --dir src/http"
   },
   "keywords": [],
   "author": "",
@@ -23,11 +24,13 @@
     "@rocketseat/eslint-config": "2.2.2",
     "@types/bcryptjs": "2.4.6",
     "@types/node": "22.5.1",
+    "@types/supertest": "6.0.2",
     "@vitest/coverage-v8": "2.0.5",
     "@vitest/ui": "2.0.5",
     "eslint": "8.57.0",
     "npm-run-all": "4.1.5",
     "prisma": "5.19.0",
+    "supertest": "7.0.0",
     "tsup": "8.2.4",
     "tsx": "4.19.0",
     "typescript": "5.5.4",
